add link to github for udacity project no.2

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <img class="card-img-top" src="img/project-02.png" alt="thumbnail">
           <div class="card-body">
             <h3 class="card-title">
-              <a href="#">portfolio website</a>
+              <a href="https://github.com/edoroskevic/udacity-nano-project-2.git">portfolio website</a>
             </h3>
             <p class="card-text">
               A project to create a portfolio website hosting all executed and
