edit container class

--- a/index.html
+++ b/index.html
@@ -18,27 +18,31 @@
     <link rel="stylesheet" href="css/master.css">
   </head>
   <body id="home">
-    <div class="flow-container">
-      <nav class="row fixed-top navbar navbar-expand-lg">
-        <button class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#nav-elements"
-          aria-controls="nav-elements"
-          aria-expanded="false"
-          aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col">
+          <nav class="row fixed-top navbar navbar-expand-lg">
+            <button class="navbar-toggler"
+              type="button"
+              data-toggle="collapse"
+              data-target="#nav-elements"
+              aria-controls="nav-elements"
+              aria-expanded="false"
+              aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
 
-        <img class="navbar-brand" src="img/logo.png" width=64 height=64 alt="logo-low-poly-crow">
+            <img class="navbar-brand" src="img/logo.png" width=64 height=64 alt="logo-low-poly-crow">
 
-        <div class="collapse navbar-collapse" id="nav-elements">
-          <div class="navbar-nav mr-auto mt-2 mt-lg-0">
-            <a class="nav-item nav-link" href="#home">home</a>
-            <a class="nav-item nav-link" href="#work">work</a>
-          </div>
+            <div class="collapse navbar-collapse" id="nav-elements">
+              <div class="navbar-nav mr-auto mt-2 mt-lg-0">
+                <a class="nav-item nav-link" href="#home">home</a>
+                <a class="nav-item nav-link" href="#work">work</a>
+              </div>
+            </div>
+          </nav>
         </div>
-      </nav>
+      </div>
 
       <div class="row">
         <div id="cover" class="col"></div>
@@ -78,6 +82,21 @@
               ongoing projects. This project demonstrates knowledge of
               technologies such as HTML and CSS, as well as showcases the ability
               to utilize this knowledge using Bootstrap library.
+            </p>
+          </div>
+        </article>
+
+        <article class="card col-lg-4 col-md-6 col-sm-12">
+          <img class="card-img-top" src="img/project-03.png" alt="thumbnail">
+          <div class="card-body">
+            <h3 class="card-title">
+              <a href="#">project</a>
+            </h3>
+            <p class="card-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              Ut enim ad minim veniam, quis nostrud exercitation ullamco
+              laboris nisi ut aliquip ex ea commodo consequat.
             </p>
           </div>
         </article>
